--- a/docs/rappport/rap.tex
+++ b/docs/rappport/rap.tex
@@ -78,6 +78,15 @@ P. Perona and J. Malik, ``Scale-space and edge detection using anisotropic diffu
 \bibitem{bay_surf_2008}
 H. Bay, A. Ess, T. Tuytelaars, and L. Van Gool, ``SURF: Speeded Up Robust Features,'' \emph{Computer Vision and Image Understanding}, vol. 110, no. 3, pp. 346--359, 2008, accessed Feb. 6, 2026. [Online]. Available: https://www.cs.jhu.edu/~misha/ReadingSeminar/Papers/Bay08.pdf
 
+\bibitem{rublee_orb_2011}
+E. Rublee, V. Rabaud, K. Konolige, and G. R. Bradski, ``ORB: An efficient alternative to SIFT or SURF,'' in \emph{Proc. IEEE International Conference on Computer Vision (ICCV)}, 2011, pp. 2564--2571, doi: 10.1109/ICCV.2011.6126544, accessed Feb. 18, 2026.
+
+\bibitem{alcantarilla_kaze_2012}
+P. F. Alcantarilla, A. Bartoli, and A. J. Davison, ``KAZE Features,'' in \emph{Computer Vision--ECCV 2012}, Lecture Notes in Computer Science, vol. 7577. Springer, 2012, pp. 214--227, doi: 10.1007/978-3-642-33783-3\_16, accessed Feb. 18, 2026.
+
+\bibitem{opencv_orb_class_reference}
+OpenCV, ``cv::ORB Class Reference,'' \emph{OpenCV Documentation}, accessed Feb. 18, 2026. [Online]. Available: \url{https://docs.opencv.org/3.4/db/d95/classcv_1_1ORB.html}
+
 \end{thebibliography}
 
 \end{document}
