--- a/docs/rappport/rap.tex
+++ b/docs/rappport/rap.tex
@@ -7,6 +7,13 @@
 \usepackage{float}
 \usepackage{url}
 
+% Reduce excessive vertical gaps around floats (tables/figures).
+\setlength{\textfloatsep}{8pt plus 1pt minus 2pt}
+\setlength{\floatsep}{8pt plus 1pt minus 2pt}
+\setlength{\intextsep}{8pt plus 1pt minus 2pt}
+\setlength{\abovecaptionskip}{4pt}
+\setlength{\belowcaptionskip}{2pt}
+
 \begin{document}
 
 \title{Robust Image Matching with Local Features}
