--- a/docs/rappport/rap.tex
+++ b/docs/rappport/rap.tex
@@ -34,10 +34,18 @@ Ce projet implémente en C++ un système complet pour le jeu Hex, conçu princip
 Hex game, C++, Object-Oriented Programming, Negamax, Transposition Table, TorchScript, SFML.
 \end{IEEEkeywords}
 
+\input{sections/convolutions.tex}
 \input{sections/descriptors_pairing.tex}
 
 \begin{thebibliography}{00}
-    
+
+\bibitem{gonzalez_woods_dip}
+R.~C. Gonzalez and R.~E. Woods, \emph{Digital Image Processing}, 4th~ed.\hskip 1em
+Pearson, 2018.
+
+\bibitem{opencv_filter2d}
+OpenCV, ``cv::filter2D,'' \emph{OpenCV Documentation} (OpenCV 4.x), accessed Feb.~17, 2026. [Online]. Available: \url{https://docs.opencv.org/4.x/d4/d86/group__imgproc__filter.html}
+
 \bibitem{opencv_feature_description}
 A. Huam\'an, ``Feature Description,'' \emph{OpenCV Documentation} (OpenCV 4.14.0-pre), accessed Feb. 6, 2026. [Online]. Available: \url{https://docs.opencv.org/4.x/d5/dde/tutorial_feature_description.html}
 
