--- a/docs/rappport/rap.tex
+++ b/docs/rappport/rap.tex
@@ -76,6 +76,9 @@ P. Perona and J. Malik, ``Scale-space and edge detection using anisotropic diffu
 \bibitem{bay_surf_2008}
 H. Bay, A. Ess, T. Tuytelaars, and L. Van Gool, ``SURF: Speeded Up Robust Features,'' \emph{Computer Vision and Image Understanding}, vol. 110, no. 3, pp. 346--359, 2008, accessed Feb. 6, 2026. [Online]. Available: https://www.cs.jhu.edu/~misha/ReadingSeminar/Papers/Bay08.pdf
 
+\bibitem{manzanera_cours1}
+A.~Manzanera, ``Cours n\textsuperscript{o}1~: Introduction --- Mod\`eles et outils fondamentaux,'' \emph{Cours CSC\_4MI04 --- Reconnaissance d'Images}, ENSTA Paris, 2025--2026.
+
 \end{thebibliography}
 
 \end{document}
